--- a/frontend/src/app/shared/component/post/post.component.html
+++ b/frontend/src/app/shared/component/post/post.component.html
@@ -1,14 +1,20 @@
-<div [routerLink]="canEdit ? [] : ['./posts/' + post.id]" class="border-1 border-solid p-4 flex flex-column h-full">
+<div
+  [routerLink]="['./posts/' + post.id]"
+  class="border-1 border-solid p-4 flex flex-column h-full"
+>
   <div class="flex justify-content-between">
-    <small *ngIf="post.createdBy">{{post.createdBy | userIdToName | async}}</small>
-    <small>{{post.createdDate | date:'HH:mm:ss dd/MM/yyyy'}}</small>
+    <small *ngIf="post.createdBy">{{ post.createdBy | userIdToName | async }}</small>
+    <small>{{ post.createdDate | date: 'HH:mm:ss dd/MM/yyyy' }}</small>
   </div>
-  <h2 class="text-xl">{{post.title}}</h2>
-  <div class="flex gap-1">
+
+  <h2 class="text-xl">{{ post.title }}</h2>
+
+  <div class="flex gap-1 flex-wrap">
     <p-tag *ngFor="let tag of post.tags" [value]="tag" [rounded]="true"></p-tag>
   </div>
-  <div *ngIf="canEdit" class="mt-2 flex gap-2 justify-content-end">
-    <p-button (click)="isEditing.emit()" label="Edit" severity="success"></p-button>
-    <p-button [routerLink]="['./posts/' + post.id]" label="Details" severity="primary"></p-button>
+
+  <!-- Đẩy phần nút xuống dưới cùng -->
+  <div *ngIf="canEdit" class="mt-auto pt-4 flex gap-2 justify-content-end">
+    <p-button (click)="onEditClick($event)" label="Edit" severity="success"></p-button>
   </div>
 </div>
